Fix issues with Javascript package

--- a/javascript/Makefile
+++ b/javascript/Makefile
@@ -1,8 +1,10 @@
-PROTOS      := $(shell find ../speechly -name *.proto)
-PACKAGE     := package.json
-MODULES     := ./node_modules
-TARGET      := ./speechly
-PROTOTS     := $(MODULES)/.bin/protoc-gen-ts
+PROTOS    := $(shell find ../speechly -name *.proto)
+PACKAGE   := package.json
+MODULES   := ./node_modules
+TARGET    := ./speechly
+PROTOC    := "$(MODULES)/.bin/grpc_tools_node_protoc"
+PROTOTS   := "$(MODULES)/.bin/protoc-gen-ts"
+PROTOGRPC := "$(MODULES)/.bin/grpc_tools_node_protoc_plugin"
 
 all: clean build
 .PHONY: all
@@ -11,16 +13,19 @@ build: $(TARGET)
 .PHONY: build
 
 clean:
-	rm -r $(TARGET)
-	rm -r $(MODULES)
+	rm -r $(TARGET) || true
+	rm -r $(MODULES) || true
 .PHONY: clean
 
+
 $(TARGET): $(PROTOS) $(MODULES)
-	@protoc \
+	$(PROTOC) \
 		-I .. \
-		--plugin="protoc-gen-ts=$(PROTOTS)" \
-		--js_out="import_style=commonjs,binary:." \
-		--ts_out="service=grpc-web:." \
+		--plugin=protoc-gen-grpc="$(PROTOGRPC)" \
+		--plugin=protoc-gen-ts="$(PROTOTS)" \
+		--js_out=import_style=commonjs,binary:. \
+		--grpc_out="." \
+		--ts_out="service=grpc-node:." \
 		$(PROTOS)
 
 	@touch $@
