--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@speechly/api",
-  "version": "0.0.7",
   "description": "Generated code for Speechly gRPC API",
   "repository": {
     "type": "git",
@@ -23,17 +22,11 @@
   },
   "homepage": "https://github.com/speechly/api#readme",
   "dependencies": {
-    "google-protobuf": "^3.13.0",
     "grpc": "^1.24.3"
   },
   "devDependencies": {
-    "@types/google-protobuf": "^3.7.3",
     "@types/node": "^14.11.2",
-    "grpc-tools": "^1.9.1",
-    "grpc_tools_node_protoc_ts": "^4.1.5",
-    "protoc-gen-grpc": "^1.4.1",
-    "ts-node": "^9.0.0",
-    "ts-protoc-gen": "^0.13.0",
     "typescript": "^4.0.3"
-  }
+  },
+  "version": "0.1.0-beta4"
 }
