Fix python build

--- a/python/Makefile
+++ b/python/Makefile
@@ -2,24 +2,30 @@ VERSION ?= latest
 
 export VERSION
 
-build: dist/speechly_api-$(VERSION).tar.gz
+build: prepare setup.py
+	@. .venv/bin/activate && python -m build
 
-.venv: src Makefile setup.py
+setup.py:
+	@echo "Patching setup.py with version $(VERSION)"
+	@cp template-setup.py setup.py
+	@sed -i.bak 's/REVISION/$(VERSION)/' setup.py && rm setup.py.bak
+
+.venv: src Makefile template-setup.py
 	@python3 -m venv .venv \
 		&& . .venv/bin/activate \
 		&& python -m pip install -U pip \
 		&& python -m pip install -U build
 
-dist/speechly_api-$(VERSION).tar.gz: .venv
-	@rm -rf dist
-	@. .venv/bin/activate && python3 -m build
-
-deploy: build
+deploy: prepare setup.py
 	@. .venv/bin/activate \
+		&& python -m build \
 		&& python -m pip install -U twine \
 		&& python -m twine upload dist/*
 
+prepare: .venv
+	@rm -rf dist setup.py
+
 clean:
-	rm -rf .venv src dist
+	rm -rf .venv src dist setup.py
 
 .PHONY: build deploy clean
