--- a/javascript/package.json
+++ b/javascript/package.json
@@ -5,27 +5,19 @@
     "type": "git",
     "url": "git+https://github.com/speechly/api.git"
   },
-  "keywords": [
-    "Speechly",
-    "SLU",
-    "NLP",
-    "speech-to-text",
-    "API",
-    "gRPC",
-    "natural",
-    "language"
-  ],
+  "keywords": ["Speechly", "SLU", "NLP", "speech-to-text", "API", "gRPC", "natural", "language"],
   "author": "Speechly",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/speechly/api/issues"
   },
   "homepage": "https://github.com/speechly/api#readme",
-  "dependencies": {
-    "grpc": "^1.24.3"
+  "peerDependencies": {
+    "google-protobuf": "^3",
+    "grpc": "^1.20.0"
   },
   "devDependencies": {
-    "@types/node": "^14.11.2",
-    "typescript": "^4.0.3"
+    "@types/node": "^14.14.32",
+    "typescript": "^4.2.3"
   }
 }
