--- a/javascript/package.json
+++ b/javascript/package.json
@@ -5,7 +5,16 @@
     "type": "git",
     "url": "git+https://github.com/speechly/api.git"
   },
-  "keywords": ["Speechly", "SLU", "NLP", "speech-to-text", "API", "gRPC", "natural", "language"],
+  "keywords": [
+    "Speechly",
+    "SLU",
+    "NLP",
+    "speech-to-text",
+    "API",
+    "gRPC",
+    "natural",
+    "language"
+  ],
   "author": "Speechly",
   "license": "MIT",
   "bugs": {
@@ -19,5 +28,6 @@
   "devDependencies": {
     "@types/node": "^14.14.32",
     "typescript": "^4.2.3"
-  }
+  },
+  "version": "0.1.2"
 }
