--- a/proto/prototool.yaml
+++ b/proto/prototool.yaml
@@ -23,7 +23,7 @@ generate:
       flags: Visibility=Public
       output: ../Sources/SpeechlyAPI
     - name: grpc-swift
-      flags: Visibility=Public
+      flags: Visibility=Public,FileNaming=PathToUnderscores
       output: ../Sources/SpeechlyAPI
     - name: js
       flags: import_style=commonjs,binary
@@ -35,7 +35,7 @@ generate:
       path: protoc-gen-ts
       output: ../javascript
     - name: csharp
-      output: ../csharp/Speechly
+      output: ../dotnet/Speechly
       flags: base_namespace=Speechly
 lint:
   group: uber2
