--- a/javascript/package.json
+++ b/javascript/package.json
@@ -17,17 +17,18 @@
   ],
   "author": "Speechly",
   "license": "MIT",
+  "files": ["speechly"],
   "bugs": {
     "url": "https://github.com/speechly/api/issues"
   },
   "homepage": "https://github.com/speechly/api#readme",
   "peerDependencies": {
-    "google-protobuf": "^3",
-    "grpc": "^1.20.0"
+    "@grpc/grpc-js": "^1.3",
+    "google-protobuf": "^3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.32",
-    "typescript": "^4.2.3"
+    "@types/node": "^16.6",
+    "typescript": "^4.3"
   },
   "version": "0.1.2"
 }
