--- a/javascript/package.json
+++ b/javascript/package.json
@@ -17,7 +17,9 @@
   ],
   "author": "Speechly",
   "license": "MIT",
-  "files": ["speechly"],
+  "files": [
+    "speechly"
+  ],
   "bugs": {
     "url": "https://github.com/speechly/api/issues"
   },
@@ -30,5 +32,5 @@
     "@types/node": "^16.6",
     "typescript": "^4.3"
   },
-  "version": "0.1.2"
+  "version": "0.3.1"
 }
