Update java / Kotlin packaging (#34)
* Update dependencies, fix packaging

* Set up GPG signing

* Remove `api` from java package

--- a/java/Makefile
+++ b/java/Makefile
@@ -1,28 +1,36 @@
 VERSION ?= latest
 MAVEN   ?= docker run -it --rm \
+	-e GPG_KEYFILE=/tmp/private.key \
+	-v $(GPG_KEYFILE):/tmp/private.key \
+	-v $(HOME)/.m2:/root/.m2 \
 	-v $(CURDIR)/settings.xml:/root/.m2/settings.xml \
 	-v $(CURDIR):$(CURDIR) \
 	-w $(CURDIR) \
-	maven:3-openjdk-11 mvn
+	maven:3-openjdk-11 $(CURDIR)/run_maven.sh
 
 export VERSION
 
-build: prepare pom.xml
-	@$(MAVEN) package
+build: prepare
+	@$(MAVEN) clean package
 
-pom.xml:
-	@echo "Patching pom.xml with version $(VERSION)"
-	@cp template-pom.xml pom.xml
-	@sed -i.bak 's/REVISION/$(VERSION)/' pom.xml && rm pom.xml.bak
-
-deploy: prepare pom.xml
-	@$(MAVEN) -Dgithub.username=$(MVN_USERNAME) -Dgithub.token=$(MVN_TOKEN) deploy
+deploy: prepare
+ifndef GPG_KEYFILE
+	$(error GPG_KEYFILE is undefined)
+endif
+ifndef GPG_PASSPHRASE
+	$(error GPG_PASSPHRASE is undefined)
+endif
+	@$(MAVEN) \
+		-Dossrh.username=$(MVN_USERNAME) \
+		-Dossrh.password=$(MVN_PASSWORD) \
+		-Dgpg.passphrase=$(GPG_PASSPHRASE) \
+		clean deploy
 
 prepare:
-	@rm -rf target
-	@rm -f pom.xml
+	@echo "Patching pom.xml with version $(VERSION)"
+	@sed -i.bak 's,<revision>.*</revision>,<revision>$(VERSION)</revision>,' pom.xml && rm pom.xml.bak
 
 clean:
-	@rm -rf target src pom.xml
+	@rm -rf src target
 
-.PHONY: build deploy clean
+.PHONY: build deploy prepare clean
