--- a/proto/prototool.yaml
+++ b/proto/prototool.yaml
@@ -38,7 +38,6 @@ generate:
       output: ../javascript
     - name: csharp
       output: ../dotnet/Speechly
-      flags: base_namespace=Speechly
     - name: csharp-grpc
       path: grpc_csharp_plugin
       output: ../dotnet/Speechly
@@ -48,6 +47,11 @@ generate:
     - name: grpc
       path: grpc_cpp_plugin
       output: ../cpp/Speechly
+      #- name: descriptor_set
+      #output: ../descriptor_set
+      #file_suffix: pb 
+      #include_imports: true
+      #include_source_info: true
 lint:
   group: uber2
   rules:
@@ -58,6 +62,21 @@ lint:
       - FILE_OPTIONS_GO_PACKAGE_NOT_LONG_FORM
 
   ignores:
+    - id: FILE_OPTIONS_REQUIRE_CSHARP_NAMESPACE
+      files:
+        - google
+    - id: FILE_OPTIONS_REQUIRE_PHP_NAMESPACE
+      files:
+        - google
+    - id: PACKAGE_MAJOR_BETA_VERSIONED
+      files:
+        - google
+    - id: FILE_OPTIONS_EQUAL_OBJC_CLASS_PREFIX_ABBR
+      files:
+        - google
+    - id: MESSAGES_HAVE_SENTENCE_COMMENTS_EXCEPT_REQUEST_RESPONSE_TYPES
+      files:
+        - google
     - id: ENUM_FIELD_PREFIXES_EXCEPT_MESSAGE
       files:
         - speechly/sal/v1/compiler.proto
