--- a/proto/prototool.yaml
+++ b/proto/prototool.yaml
@@ -49,7 +49,7 @@ generate:
       output: ../cpp/Speechly
       #- name: descriptor_set
       #output: ../descriptor_set
-      #file_suffix: pb 
+      #file_suffix: pb
       #include_imports: true
       #include_source_info: true
 lint:
@@ -81,11 +81,13 @@ lint:
       files:
         - speechly/sal/v1/compiler.proto
         - speechly/slu/v1/slu.proto
+        - speechly/slu/v2beta1/batch.proto
     - id: ENUM_ZERO_VALUES_INVALID_EXCEPT_MESSAGE
       files:
         - speechly/config/v1/config_api.proto
         - speechly/sal/v1/compiler.proto
         - speechly/slu/v1/slu.proto
+        - speechly/slu/v2beta1/batch.proto
     - id: FILE_OPTIONS_EQUAL_JAVA_PACKAGE_PREFIX
       files:
         - speechly/config/v1/config_api.proto
